Free pt in another error case. Found by Henning Petersen using cppcheck, in PR 42488.